# edureka_capstone

./: .env.example  DOCUMENT.md  Dockerfile  Edureka Capstone Project.docx  LICENSE  README.docx.md  README.md  generate_samples.py  pyproject.toml  run.sh
.github/workflows/: huggingface_sync.yml
app/: config.py  main.py
app/api/routes/: chat.py  documents.py  health.py
app/core/: agent.py  ingestion.py  vector_store.py
app/models/: schemas.py
docs/images/: langgraph_generated.mmd
frontend/: api_client.py  app.py
prompts/: clinical_guidelines.txt  drug_interactions.txt  lab_interpretation.txt  patient_records.txt  renal_dosing.txt  sepsis_critical_care.txt
sample_data/: sample_drug_interactions.csv  sample_patient_records.xlsx  sample_treatment_notes.txt
scripts/: generate_graph.py  hf_start.sh  pre_download_models.py
