[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edureka-capstone"
version = "1.0.0"
description = "Agentic RAG application — chat with your enterprise documents using LangGraph + LLM + ChromaDB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["rag", "llm", "agentic", "langchain", "langgraph", "vector-store", "chatbot", "fastapi", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ── Web framework ────────────────────────────────────────────────────────
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",      # multipart/form-data file uploads
    "aiofiles>=23.2.1",

    # ── RAG orchestration ────────────────────────────────────────────────────
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",

    # ── LLM providers ────────────────────────────────────────────────────────
    "langchain-google-genai>=1.0.0",  # Google Gemini (default)
    "langchain-openai>=0.1.0",        # OpenAI (optional)

    # ── Embeddings (local, no API key) ───────────────────────────────────────
    "sentence-transformers>=3.0.0",
    "langchain-huggingface>=0.0.3",

    # ── Vector store (in-memory) ─────────────────────────────────────────────
    "chromadb>=0.5.0",
    "langchain-chroma>=0.1.2",

    # ── Document loaders ─────────────────────────────────────────────────────
    "pypdf>=4.2.0",
    "unstructured>=0.14.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",

    # ── Data handling ────────────────────────────────────────────────────────
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # ── Frontend ─────────────────────────────────────────────────────────────
    "streamlit>=1.35.0",

    # ── HTTP client (frontend → backend) ─────────────────────────────────────
    "httpx>=0.27.0",

    # ── Config & utilities ───────────────────────────────────────────────────
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",           # for TestClient
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/mishrabp/edureka_capstone"
Repository = "https://github.com/mishrabp/edureka_capstone"
Issues = "https://github.com/mishrabp/edureka_capstone/issues"

[project.scripts]
rag-server   = "app.main:app"
rag-frontend = "frontend.app:main"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "frontend*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
